Clean pipeline: remove preprocess rule, update run_pipeline.sh, add preprocessed_final.csv

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,8 @@
+# ============================================
+#   Predictathon Pipeline Configuration
+# ============================================
+
+# Trials for which CV0 / CV00 predictions will be generated
 focal_trials:
   - AWY1_DVPWA_2024
   - TCAP_2025_MANKS
@@ -9,9 +14,11 @@ focal_trials:
   - YT_Urb_25
   - STP1_2025_MCG
 
+# Trait configuration
 traits:
-  target_trait: value
+  target_trait: value   # column name in train_pheno_overlap.csv
 
+# Model configuration
 model:
-  use_ml: false
-  lambda_factor: 1e-5
+  use_ml: false         # use RR-BLUP / GBLUP
+  lambda_factor: 1e-5   # ridge penalty scaling
